Fixed testcases being present in smoke test image

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -3,7 +3,8 @@ FROM alpine:3.5
 RUN apk add --no-cache curl
 RUN apk add --no-cache bash
 
-COPY testcases /tmp
+RUN mkdir /tmp/testcases
+COPY testcases/* /tmp/testcases/
 COPY forgeops-smoke-test.sh /tmp
 
 RUN chmod +x /tmp/forgeops-smoke-test.sh
